# api/v2/openapi.yaml
@@ -241,6 +241,37 @@ paths:
           $ref: '#/responses/BadRequest'
         '500':
           $ref: '#/responses/InternalServerError'
+  /alertgroups:
+    get:
+      tags:
+        - alertgroupinfolist
+      operationId: getAlertGroupInfoList
+      description: Get a list of alert groups information
+      parameters:
+        - name: receiver
+          in: query
+          description: A regex matching receivers to filter alerts by
+          required: false
+          type: string
+        - name: nextToken
+          in: query
+          description: The token for the next set of items to return
+          required: false
+          type: string
+        - name: maxResults
+          in: query
+          description: The maximum number of alert groups to return in one getAlertGroupInfoList operation.
+          required: false
+          type: integer
+      responses:
+        '200':
+          description: Get alert groups info response
+          schema:
+            '$ref': '#/definitions/alertGroupInfoList'
+        '400':
+          $ref: '#/responses/BadRequest'
+        '500':
+          $ref: '#/responses/InternalServerError'
 
 responses:
   BadRequest:
@@ -483,6 +514,28 @@ definitions:
       - labels
       - receiver
       - alerts
+  alertGroupInfoList:
+    type: object
+    properties:
+      alertGroupInfoList:
+        type: array
+        items:
+          $ref: '#/definitions/alertGroupInfo'
+      nextToken:
+        type: string
+  alertGroupInfo:
+    type: object
+    properties:
+      labels:
+        $ref: '#/definitions/labelSet'
+      receiver:
+        $ref: '#/definitions/receiver'
+      id:
+        type: string
+    required:
+      - labels
+      - receiver
+      - id
   alertStatus:
     type: object
     properties:
